# deepdrivemd

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  setup.cfg  setup.py
deepdrivemd/: __init__.py  api.py  config.py  parsl.py  utils.py
deepdrivemd/applications/cvae_inference/: __init__.py  app.py
deepdrivemd/applications/cvae_train/: __init__.py  app.py
deepdrivemd/applications/openmm_simulation/: __init__.py  app.py
deepdrivemd/apps/cvae_inference/: __init__.py  app.py
deepdrivemd/apps/cvae_train/: app.py
deepdrivemd/apps/openmm_simulation/: app.py
deepdrivemd/folding_openmm_cvae/: run.py
deepdrivemd/folding_openmm_cvae/simulation/: __init__.py  app.py
deepdrivemd/folding_openmm_cvae/train/: __init__.py
deepdrivemd/ligand_unbinding_openmm_cvae/: run.py
deepdrivemd/ligand_unbinding_openmm_cvae/inference/: __init__.py  (+1 more)
deepdrivemd/utils/: openmm.py
deepdrivemd/workflows/: openmm_cvae.py
examples/bba-folding-polaris/: cvae-prod-settings.yaml  prod.yaml
examples/bba-folding-workstation/: cvae-prod-settings.yaml  prod.yaml
examples/cln025-folding-workstation/: cvae-prod-settings.yaml  prod.yaml
examples/ntl9-folding-workstation/: cvae-prod-settings.yaml  prod.yaml
requirements/: dev.txt  requirements.txt
tests/: test_deepdrivemd.py
tests/apps-enabled-lsf/: cvae-settings.yaml  test-2.yaml  test-3.yaml  test.yaml
tests/apps-enabled-tahoma/: cvae-settings.yaml  test-2-nodes.yaml  test.yaml
tests/apps-enabled-workstation/: cvae-settings.yaml  test-2.yaml  test.yaml
tests/basic-local/: test.yaml
(+4 files in other folders)
