[metadata]
name = deepdrivemd
version = attr: deepdrivemd.__version__
description = DeepDriveMD workflow.
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/ramanathanlab/deepdrivemd
author = Alexander Brace, Heng Ma, Arvind Ramanathan
author_email = ramanathana@anl.gov

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests
    docs

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True

[mypy-proxystore.*]
ignore_missing_imports = True

[mypy-watchdog.*]
ignore_missing_imports = True
